<resources>
    <string name="app_name">CalculadoraDEMO</string>
    <string name="buttonClear">AC</string>
    <string name="buttonDiv">/</string>
    <string name="buttonSin">Sin</string>
    <string name="buttonCos">Cos</string>
    <string name="buttonTg">Tan</string>
    <string name="buttonSum">+</string>
    <string name="buttonRes">-</string>
    <string name="buttonMul">x</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonPoint">.</string>
    <string name="buttonIgual">=</string>
    <string name="buttonExtra">DEL</string>
    <string name="grados">Degrees</string>
</resources>